Extend Study participant object details in audits to include StudyDescription, SeriesDescription and Modality #4555